fix: landing page scrollbar

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -203,8 +203,8 @@
 
     /* Custom Scrollbar */
     ::-webkit-scrollbar {
-        width: 8px;
-        height: 8px;
+        width: 6px;
+        height: 6px;
     }
 
     ::-webkit-scrollbar-track {
@@ -212,10 +212,8 @@
     }
 
     ::-webkit-scrollbar-thumb {
-        background-color: #cbd5e1;
-        border-radius: 20px;
-        border: 3px solid transparent;
-        background-clip: content-box;
+        background-color: #94a3b8;
+        border-radius: 10px;
     }
 
     ::-webkit-scrollbar-thumb:hover {
